# cpp_stoper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.hpp
logger/: logger.cpp  logger.hpp
utils/: number_ops.cpp  number_ops.hpp
